Implemented JWT authentication and user management features. Added product management, favorites, and WebSocket support.